vlib/v/checker/tests/for_comptime_enum_fields_err.vv
enum Test {
	one
	two
}

$for i in Test.fields {
	println(i)
}
